--- a/Page 4.html
+++ b/Page 4.html
@@ -32,7 +32,8 @@
 	<table cellspacing="2" align="center" cellpadding="8" border="0">
 	<tr>
 	<td>Enter User Name :</td>
-	<td><input type="text" placeholder="Enter User name" id="email" class="tb" /></td>
+	<td><input type="text" placeholder="roshan noob is my name
+		"id="email" class="tb" /></td>
 	</tr>
 	<tr>
 	<td>Enter Password :</td>
