--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<div id="start">
 		<nav>
 			<ul>
-				<li class="logo">Roshan is a  Kafle and we all know that(Networking Student)</li>
+				<li class="logo">Roshan and we all know that(Networking Student)</li>
 				<div class="items">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="Page 1.html">CV</a></li>
