--- a/Page 1.html
+++ b/Page 1.html
@@ -36,7 +36,7 @@
 	<div class="resume_content">
 		<div class="resume_item resume_info">
 			<div class="title">
-			<p class="bold">Name:Roshan Kafle</p>
+			<p class="bold">Name:Rosan Kafle</p>
 			<p class="regular">Networking student</p>
 			<p class="regular">College:Isligton College,Kathmandu</p>	
 			</div>
