--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 		<div id="link">
 			<div class="msg-col">
 				<h1>CV</h1>
-				<p>Hello, its me Roshan kafle.<br>I am a networking student <br>and currently working<br> as a
-					freelancer.</p>
+				<p>Hello, its me Roshan kafle.<br>I am a networking student and vegeterian <br>and currently working<br> as a
+					freelancer and as a noobie.</p>
 				<a href="Page 1.html">See More</a>
 			</div>
 			<div class="msg-col">
